...
  String spent4 = "0.0";
  String rem4 = "0";
  bool editFour = false;
  String buttonMsg = "";
  final FirebaseFirestore firestore = GetIt.I.get();
  CollectionReference get _budget =>
      firestore.collection('Users').doc(uid).collection('Budget');
  CollectionReference get _groceryList =>
      firestore.collection('Users').doc(uid).collection('GroceryList');

  CollectionReference get _frequent =>
      firestore.collection('Users').doc(uid).collection('Frequency');
  List<String> frequentItems = [];
...
        .collection('Budget')
        .doc(widget.month)
        .collection('Week1')
        .get()
        .then((QuerySnapshot qs) {
      qs.docs.forEach((doc) {
        spent1 = doc["amount spent"].toStringAsFixed(2);
        //print(doc["amount spent"]);
        mybudget = doc["budget"].toStringAsFixed(2);
        rem1 = doc["amount remaining"];
      });
    });

...
              ],
            ),
            alignment: Alignment.centerLeft,
          ),
          SizedBox(height: 25),
          ElevatedButton(
            key: const Key("editBudget"),
            onPressed: () async => {
              setState(() {
                budgetSet = true;
              })
            },
            child: const Text(
...
                fontWeight: FontWeight.bold,
              )),
          const SizedBox(
            height: 25,
          ),
          TextField(
            key: const Key("enterBudget"),
            controller: budgetController,
            decoration: const InputDecoration(
              hintText: ('R '),
              labelText: 'Budget',
              prefixIcon: Icon(Icons.money),
              border: OutlineInputBorder(),
...
            keyboardType: TextInputType.number,
            textInputAction: TextInputAction.done,
            // autofocus: true,
          ),
          SizedBox(height: 10),
          ElevatedButton(
            key: const Key("setBudget"),
            onPressed: () {
              setState(() {
                //totSpent = 0;

                budgetSet = false;
                input = budgetController.text;
...
                          mainAxisAlignment: MainAxisAlignment.spaceBetween,
                          children: [
                            const Text("   Amount Remaining"),
                            Text("R " + rem1 + "   "),
                          ]),
                      IconButton(
                        key: Key('Week1 edit'),
                        alignment: Alignment.bottomRight,
                        //color: Colors.green,
                        //hoverColor: Colors.green,
                        icon: const Icon(Icons.edit),
                        onPressed: () {
                          setState(() => {
...
                  )
                ]))));
  }

  //double update = 0;
  Widget EstTotal() => ElevatedButton(
        key: Key("Compare"),
        onPressed: () async {
          est = 0;
          var totals =
              firestore.collection('Users').doc(uid).collection('GL totals');
          var ds = await totals.doc('Totals').get();
          if (ds.exists) {
...
          minimumSize: Size(150, 50),
          shape: const StadiumBorder(),
          onPrimary: const Color.fromARGB(255, 150, 66, 154),
          side: BorderSide(
              color: const Color.fromARGB(255, 150, 66, 154), width: 3.0),
        ),
        child: const Text("Compare to Grocery List"),
      );

  showAlertDialog(BuildContext context) {
    // set up the button
    Widget okButton = TextButton(
      key: Key("okbutton"),
      child: const Text("OK"),
      onPressed: () {
        Navigator.of(context, rootNavigator: true).pop('dialog');
      },
    );

...
