...
                child: SingleChildScrollView(
                  child: Column(
                    children: <Widget>[
                      //email
                      TextFormField(
                        style: TextStyle(fontSize: 20),
                        decoration: InputDecoration(labelText: 'Email'),
                        keyboardType: TextInputType.emailAddress,
                        validator: (value) {
                          if (value!.isEmpty || !value.contains('@')) {
                            return 'invalid email';
                          }
                          return null;
...
                      ),
                      SizedBox(height: size.height * 0.03),
                      //password
                      TextFormField(
                        key: const ValueKey("Email"),
                        style: TextStyle(fontSize: 20),
                        decoration: InputDecoration(labelText: 'Password'),
                        obscureText: true,
                        controller: _passwordController,
                        validator: (value) {
                          if (value!.isEmpty || value.length <= 5) {
                            return 'invalid password';
                          }
...
                        },
                        onSaved: (value) {
                          _authData['password'] = value!;
                        },
                      ),
                      SizedBox(height: size.height * 0.03),
                      //Confirm Password
                      TextFormField(
                        key: const ValueKey("Confirm Password"),
                        style: TextStyle(fontSize: 20),
                        decoration:
                            InputDecoration(labelText: 'Confirm Password'),
                        obscureText: true,
...
                          minimumSize: const Size(300, 50),
                          onPrimary: Colors.white,
                          side: const BorderSide(
                              color: Color.fromARGB(255, 150, 66, 154),
                              width: 3.0),
                        ),
                        key: const ValueKey("Submit"),
                        child: Container(
                          alignment: Alignment.center,
                          height: 50.0,
                          width: size.width * 0.5,
                          child: const Text(
                            'Sign up',
...
